--- a/htb-writeups/index.html
+++ b/htb-writeups/index.html
@@ -317,15 +317,15 @@
     <!-- Latest Writeup -->
     <div class="latest-section">
         <h2>Latest Writeup</h2>
-        <div class="box-card" onclick="window.location.href='Data_HTB.html'">
+        <div class="box-card" onclick="window.location.href='C:/PrivIT/HTB/htb-writeups/easy/images/Data/Data_HTB.html'">
             <h3>Data</h3>
             <div class="box-meta">
                 <span class="badge badge-easy">Easy</span>
                 <span class="badge badge-linux">Linux</span>
-                <span class="date">Completed: December 11, 2025</span>
+                <span class="date">Completed: November 11, 2025</span>
             </div>
             <p>Exploited an outdated Grafana instance using directory traversal (CVE-2024-43798) to extract credentials. Leveraged misconfigured Docker privileges for container escape and achieved root access misconfigured mounting of the host filesystem.</p>
-            <a href="Data_HTB.html" class="read-more">Read Full Writeup</a>
+            <a href="C:/PrivIT/HTB/htb-writeups/easy/images/Data/Data_HTB.html" class="read-more">Read Full Writeup</a>
         </div>
     </div>
 
@@ -340,12 +340,12 @@
                 <span class="badge badge-easy">1 Box</span>
             </div>
             <div class="box-grid">
-                <div class="box-item" onclick="window.location.href='Data_HTB.html'">
+                <div class="box-item" onclick="window.location.href='C:/PrivIT/HTB/htb-writeups/easy/images/Data/Data_HTB.html'">
                     <h4>Data</h4>
                     <div class="box-meta">
                         <span class="badge badge-linux">Linux</span>
                     </div>
-                    <div class="date">December 11, 2025</div>
+                    <div class="date">November 11, 2025</div>
                     <div class="description">Grafana directory traversal → Docker container escape</div>
                 </div>
             </div>
